slide/src/test/ui/error/pattern/any_pat_in_expr.slide
===in
1 + _any
===in

~~~stdout
~~~stdout

~~~stderr
error: Patterns cannot be used in an expression
  |
1 | 1 + _any 
  |     ^^^^ unexpected pattern
  |
  = help: consider using "any" as a variable

~~~stderr

~~~exitcode
1
~~~exitcode
